dist/watcharr/Service.watcharr.yaml
apiVersion: v1
kind: Service
metadata:
  name: watcharr
  namespace: watcharr
spec:
  externalIPs: []
  ports:
    - name: http
      port: 3080
      targetPort: 3080
  selector:
    cdk8s.io/metadata.addr: watcharr-watcharr-deployment-c86dec6d
  type: ClusterIP
